--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 *.pch
 
 # Compiled Dynamic libraries
-*.so
+# *.so
 *.dylib
 *.dll
 
@@ -30,3 +30,7 @@
 *.exe
 *.out
 *.app
+
+obj
+libs
+.DS_Store
