--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 *.orp filter=lfs diff=lfs merge=lfs -text
 *.a filter=lfs diff=lfs merge=lfs -text
 node filter=lfs diff=lfs merge=lfs -text
+node/* linguist-vendored
+opencv/* linguist-vendored
+zxing/* linguist-vendored
